@@ -1,6 +1,10 @@
 Knot Resolver 3.x.y (2019-0m-dd)
 ================================
 
+Incompatible changes
+--------------------
+- libknot >= 2.7.6 is required
+
 Bugfixes
 --------
 - predict module: load stats module if config didn't specify period (!755)
